index.html, image

--- a/index.html
+++ b/index.html
@@ -17,5 +17,27 @@
     ></script>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- nav bar 시작 -->
+    <nav id="navbar">
+      <div class="navbar__logo">
+        <i class="fa-brands fa-gg-circle"></i>
+        <a href="#">zeto</a>
+      </div>
+      <ul class="navbar__menu">
+        <li class="navbar__menu__item active">Home</li>
+        <li class="navbar__menu__item">Intro</li>
+        <li class="navbar__menu__item">Skill</li>
+        <li class="navbar__menu__item">Career</li>
+        <li class="navbar__menu__item">Project</li>
+        <li class="navbar__menu__item">Ex</li>
+      </ul>
+      <!-- button start -->
+      <button class="navbar__toggle-btn">
+        <i class="fa-solid fa-bars"></i>
+      </button>
+      <!-- button end -->
+    </nav>
+    <!-- nav bar 끝 지점 -->
+  </body>
 </html>
