index.html(intro)

--- a/index.html
+++ b/index.html
@@ -39,5 +39,61 @@
       <!-- button end -->
     </nav>
     <!-- nav bar 끝 지점 -->
+
+    <!-- Home start -->
+    <section id="home">
+      <div class="home__container">
+        <img
+          src="./image/KakaoTalk_20221031_173009866-removebg-preview.png"
+          alt="안아줘요라고 말하는 다람쥐"
+          class="home__avatar"
+        />
+        <h1 class="home__title">안녕하세요 zeto라고 합니다.</h1>
+        <h2 class="home__description">
+          서울 은평구에 거주중이고 현재는 개발자 지망생입니다.
+        </h2>
+        <button class="home__contact">연락주세오..</button>
+      </div>
+    </section>
+    <!-- Home end -->
+    <!-- Intro start -->
+    <section id="intro" class="section__container">
+      <h1>Intro</h1>
+      <p>
+        - 국민대학교 AI빅데이터융합경영학과(구 빅데이터경영통계학과)재학<br />
+        - 학과 강의에서 파이썬 프로그래밍, 데이터분석 다수경험, 통계 강의
+        수강<br />
+        - IT 아카데미 강남점에서 추가로 파이썬 및 AI 데이터분석 강의 수강 및
+        수료<br />
+      </p>
+      <div class="intro__majors">
+        <div class="major">
+          <div class="major_icon">
+            <i class="fa-brands fa-html5"></i>
+            <i class="fa-brands fa-css3-alt"></i>
+            <i class="fa-brands fa-js"></i>
+            <i class="fa-brands fa-react"></i>
+          </div>
+          <h2 class="major_title">FrontEnd</h2>
+          <div class="major_description">
+            HTML CSS JavaScript, TypeScript,<br />
+            React,Vue
+          </div>
+        </div>
+        <div class="major">
+          <div class="major_icon">
+            <i class="fa-brands fa-java"></i>
+            <i class="fa-brands fa-python"></i>
+            <i class="fa-brands fa-js"></i>
+            <i class="fa-brands fa-node-js"></i>
+          </div>
+          <h2 class="major_title">BackEnd</h2>
+          <div class="major_description">
+            Java, Python, JavaScript, NodeJs,<br />
+            Spring
+          </div>
+        </div>
+      </div>
+
   </body>
 </html>
