index.html(intro finish)

--- a/index.html
+++ b/index.html
@@ -94,6 +94,19 @@
           </div>
         </div>
       </div>
-
+      <div class="Intro__jobs">
+        <div class="job">
+          <img
+            src="https://img.etnews.com/news/article/2020/07/24/cms_temp_article_24170551485569.png"
+            alt=""
+          />
+          <div class="job__description">
+            <p class="job__name">night counselor</p>
+            <p class="job__period">3 months</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Intro end -->
   </body>
 </html>
