--- a/index.html
+++ b/index.html
@@ -108,5 +108,90 @@
       </div>
     </section>
     <!-- Intro end -->
+    <!-- Skill start -->
+    <div id="Skill" class="section">
+      <div class="section_container">
+        <h1>skill</h1>
+        <h2>intro</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+          suscipit repellat odit. Illum officia, voluptas ad necessitatibus
+          ipsa, id delectus, similique incidunt atque facilis rerum laboriosam.
+          Cum accusamus eveniet suscipit.
+        </p>
+        <div class="skillset">
+          <div class="skillset__left">
+            <h3 class="skillset__title">skill</h3>
+            <div class="skill">
+              <div class="skill__description">
+                <span>HTML</span>
+                <span>100%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill__value"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>CSS</span>
+                <span>80%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill__value"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>javascript</span>
+                <span>60%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill__value"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>PYTHON</span>
+                <span>80%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill__value"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>Java</span>
+                <span>70%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill__value"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="skillset__right">
+          <div class="tools">
+            <h3 class="skillset__title">Tools</h3>
+            <ul class="tools__list">
+              <li><span>VS CODE</span></li>
+              <li><span>Intellij</span></li>
+              <li><span>jupyter notebook</span></li>
+              <li><span>github desktop</span></li>
+              <li><span>google colab</span></li>
+              <li><span>MYSQL</span></li>
+              <li><span>R-studio</span></li>
+            </ul>
+          </div>
+          <div class="etc">
+            <h3 class="skillset__title">Etc</h3>
+            <ul class="etc_list">
+              <li><span>badminton</span></li>
+              <li>analytic</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Skill end -->
   </body>
 </html>
