index.html-project

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <li class="navbar__menu__item active">Home</li>
         <li class="navbar__menu__item">Intro</li>
         <li class="navbar__menu__item">Skill</li>
-        <li class="navbar__menu__item">Career</li>
         <li class="navbar__menu__item">Project</li>
         <li class="navbar__menu__item">Ex</li>
+        <li class="navbar__menu__item">Contact</li>
       </ul>
       <!-- button start -->
       <button class="navbar__toggle-btn">
@@ -193,5 +193,53 @@
       </div>
     </div>
     <!-- Skill end -->
-  </body>
+    <!-- Project start -->
+    <section id="project" class="section">
+      <div class="section__continer">
+        <h1>my lab</h1>
+        <h3>Project</h3>
+        <div class="project_category">
+          <button class="category__btn">total <span>3</span></button>
+          <button class="category__btn">FrontEnd <span>1</span></button>
+          <button class="category__btn">BackEnd <span>2</span></button>
+        </div>
+        <div class="project__work">
+          <a href="#" class="project" target="_blank">
+            <img
+              src="./image/KakaoTalk_20221031_173009866-removebg-preview.png"
+              alt="project image"
+              class="project__image"
+            />
+            <div class="project__description">
+              <h3>주가분석</h3>
+              <span>잘됌</span>
+            </div>
+          </a>
+          <a href="#" class="project" target="_blank">
+            <img
+              src="./image/KakaoTalk_20221031_173009866-removebg-preview.png"
+              alt="project image"
+              class="project__image"
+            />
+            <div class="project__description">
+              <h3>미들프로젝트</h3>
+              <span>이쁘게나옴</span>
+            </div>
+          </a>
+          <a href="#" class="project" target="_blank">
+            <img
+              src="./image/KakaoTalk_20221031_173009866-removebg-preview.png"
+              alt="project image"
+              class="project__image"
+            />
+            <div class="project__description">
+              <h3>파이널프로젝트</h3>
+              <span>서버연결원활</span>
+            </div>
+          </a>
+        </div>
+      </div>
+    </section>
+    <!-- Project end -->
+
 </html>
