index.html-project,testimonial

--- a/index.html
+++ b/index.html
@@ -241,5 +241,64 @@
       </div>
     </section>
     <!-- Project end -->
-
+    <!-- 추천서 -->
+    <section id="testimonials" class="section">
+      <div class="section__container">
+        <h1>추천서</h1>
+        <h3>이분들은 저를 보고 디자인감각이없다고 하셨어요...</h3>
+        <div class="textimonials">
+          <div class="textimonial">
+            <img
+              src="./image/KakaoTalk_20221031_173009866-removebg-preview.png"
+              alt=""
+              class="testimonial__avatar"
+            />
+            <div class="testimonial__speech-bubble">
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque
+                dolorem laboriosam, itaque aperiam quos fuga eos? Dolorum
+                doloribus suscipit autem est deserunt hic? Tempora quaerat saepe
+                odio nisi. Dicta, mollitia!
+              </p>
+              <p class="name"><a href="#">배정수</a>koreait academy</p>
+            </div>
+          </div>
+          <div class="textimonial">
+            <img
+              src="./image/KakaoTalk_20221031_173009866-removebg-preview.png"
+              alt=""
+              class="testimonial__avatar"
+            />
+            <div class="testimonial__speech-bubble">
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque
+                dolorem laboriosam, itaque aperiam quos fuga eos? Dolorum
+                doloribus suscipit autem est deserunt hic? Tempora quaerat saepe
+                odio nisi. Dicta, mollitia!
+              </p>
+              <p class="name"><a href="#">이은재</a>75사단</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- 추천서 -->
+    <!-- contact -->
+    <section id="contact" class="section">
+      <h1 class="contact__title">연락주세요</h1>
+      <h2 class="contact__email">lhj880067@gmail.com</h2>
+      <div class="contact__links">
+        <a href="#" target="_blank">
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a href="#" target="_blank">
+          <i class="fa-brands fa-facebook"></i>
+        </a>
+      </div>
+      <p class="contact__rights">2022 zeto - ALL rights reserved</p>
+    </section>
+    <button class="arrow-up">
+      <i class="fa-solid fa-arrow-up"></i>
+    </button>
+  </body>
 </html>
