--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
     <!-- Home end -->
     <!-- Intro start -->
-    <section id="intro" class="section__container">
+    <section id="intro" class="section__container section">
       <h1>Intro</h1>
       <p>
         - 국민대학교 AI빅데이터융합경영학과(구 빅데이터경영통계학과)재학<br />
@@ -70,9 +70,7 @@
         <div class="major">
           <div class="major_icon">
             <i class="fa-brands fa-html5"></i>
-            <i class="fa-brands fa-css3-alt"></i>
             <i class="fa-brands fa-js"></i>
-            <i class="fa-brands fa-react"></i>
           </div>
           <h2 class="major_title">FrontEnd</h2>
           <div class="major_description">
@@ -84,8 +82,6 @@
           <div class="major_icon">
             <i class="fa-brands fa-java"></i>
             <i class="fa-brands fa-python"></i>
-            <i class="fa-brands fa-js"></i>
-            <i class="fa-brands fa-node-js"></i>
           </div>
           <h2 class="major_title">BackEnd</h2>
           <div class="major_description">
@@ -110,7 +106,7 @@
     <!-- Intro end -->
     <!-- Skill start -->
     <div id="Skill" class="section">
-      <div class="section_container">
+      <div class="section__container">
         <h1>skill</h1>
         <h2>intro</h2>
         <p>
@@ -206,7 +202,7 @@
         <div class="project__work">
           <a href="#" class="project" target="_blank">
             <img
-              src="./image/KakaoTalk_20221031_173009866-removebg-preview.png"
+              src="./image/KakaoTalk_20221102_150513985.jpg"
               alt="project image"
               class="project__image"
             />
@@ -217,7 +213,7 @@
           </a>
           <a href="#" class="project" target="_blank">
             <img
-              src="./image/KakaoTalk_20221031_173009866-removebg-preview.png"
+              src="./image/KakaoTalk_20221102_150513985_01.jpg"
               alt="project image"
               class="project__image"
             />
@@ -228,7 +224,7 @@
           </a>
           <a href="#" class="project" target="_blank">
             <img
-              src="./image/KakaoTalk_20221031_173009866-removebg-preview.png"
+              src="./image/KakaoTalk_20221102_150513985_02.jpg"
               alt="project image"
               class="project__image"
             />
@@ -249,7 +245,7 @@
         <div class="textimonials">
           <div class="textimonial">
             <img
-              src="./image/KakaoTalk_20221031_173009866-removebg-preview.png"
+              src=".//image/KakaoTalk_20221102_150746775.jpg"
               alt=""
               class="testimonial__avatar"
             />
@@ -265,7 +261,7 @@
           </div>
           <div class="textimonial">
             <img
-              src="./image/KakaoTalk_20221031_173009866-removebg-preview.png"
+              src="./image/KakaoTalk_20221102_150746775_01.jpg"
               alt=""
               class="testimonial__avatar"
             />
