--- a/index.html
+++ b/index.html
@@ -250,13 +250,10 @@
               class="testimonial__avatar"
             />
             <div class="testimonial__speech-bubble">
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque
-                dolorem laboriosam, itaque aperiam quos fuga eos? Dolorum
-                doloribus suscipit autem est deserunt hic? Tempora quaerat saepe
-                odio nisi. Dicta, mollitia!
+              <p>혁제씨는 색감이 없어 개발자가 딱이야..</p>
+              <p class="name">
+                <a href="#">류정원 &nbsp;&nbsp;&nbsp; </a>koreait academy
               </p>
-              <p class="name"><a href="#">배정수</a>koreait academy</p>
             </div>
           </div>
           <div class="textimonial">
@@ -266,13 +263,10 @@
               class="testimonial__avatar"
             />
             <div class="testimonial__speech-bubble">
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque
-                dolorem laboriosam, itaque aperiam quos fuga eos? Dolorum
-                doloribus suscipit autem est deserunt hic? Tempora quaerat saepe
-                odio nisi. Dicta, mollitia!
+              <p>그거 확실해? 그색 맞아?</p>
+              <p class="name">
+                <a href="#">안승균 &nbsp;&nbsp;&nbsp; </a>koreait academy
               </p>
-              <p class="name"><a href="#">이은재</a>75사단</p>
             </div>
           </div>
         </div>
