--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
           <img
             src="https://img.etnews.com/news/article/2020/07/24/cms_temp_article_24170551485569.png"
             alt=""
+            class="about__jobs__icon"
           />
           <div class="job__description">
             <p class="job__name">night counselor</p>
@@ -124,7 +125,7 @@
                 <span>100%</span>
               </div>
               <div class="skill_bar">
-                <div class="skill__value"></div>
+                <div class="skill__value" style="width: 100%"></div>
               </div>
             </div>
             <div class="skill">
@@ -133,7 +134,7 @@
                 <span>80%</span>
               </div>
               <div class="skill_bar">
-                <div class="skill__value"></div>
+                <div class="skill__value" style="width: 80%"></div>
               </div>
             </div>
             <div class="skill">
@@ -142,7 +143,7 @@
                 <span>60%</span>
               </div>
               <div class="skill_bar">
-                <div class="skill__value"></div>
+                <div class="skill__value" style="width: 60%"></div>
               </div>
             </div>
             <div class="skill">
@@ -151,7 +152,7 @@
                 <span>80%</span>
               </div>
               <div class="skill_bar">
-                <div class="skill__value"></div>
+                <div class="skill__value" style="width: 80%"></div>
               </div>
             </div>
             <div class="skill">
@@ -160,24 +161,24 @@
                 <span>70%</span>
               </div>
               <div class="skill_bar">
-                <div class="skill__value"></div>
+                <div class="skill__value" style="width: 70%"></div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="skillset__right">
-          <div class="tools">
-            <h3 class="skillset__title">Tools</h3>
-            <ul class="tools__list">
-              <li><span>VS CODE</span></li>
-              <li><span>Intellij</span></li>
-              <li><span>jupyter notebook</span></li>
-              <li><span>github desktop</span></li>
-              <li><span>google colab</span></li>
-              <li><span>MYSQL</span></li>
-              <li><span>R-studio</span></li>
-            </ul>
-          </div>
+
+          <div class="skillset__right">
+            <div class="tools">
+              <h3 class="skillset__title">Tools</h3>
+              <ul class="tools__list">
+                <li><span>VS CODE</span></li>
+                <li><span>Intellij</span></li>
+                <li><span>jupyter notebook</span></li>
+                <li><span>github desktop</span></li>
+                <li><span>google colab</span></li>
+                <li><span>MYSQL</span></li>
+                <li><span>R-studio</span></li>
+              </ul>
+            </div>
           <div class="etc">
             <h3 class="skillset__title">Etc</h3>
             <ul class="etc_list">
@@ -195,9 +196,9 @@
         <h1>my lab</h1>
         <h3>Project</h3>
         <div class="project_category">
-          <button class="category__btn">total <span>3</span></button>
-          <button class="category__btn">FrontEnd <span>1</span></button>
-          <button class="category__btn">BackEnd <span>2</span></button>
+          <button class="category__btn">total <span class="category__count">3</span></button>
+          <button class="category__btn">FrontEnd <span class="category__count">1</span></button>
+          <button class="category__btn">BackEnd <span class="category__count">2</span></button>
         </div>
         <div class="project__work">
           <a href="#" class="project" target="_blank">
