--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
     <!-- Home end -->
     <!-- Intro start -->
-    <section id="intro" class="section__container section">
+    <section id="intro" class="section">
       <h1>Intro</h1>
       <p>
         - 국민대학교 AI빅데이터융합경영학과(구 빅데이터경영통계학과)재학<br />
@@ -111,10 +111,13 @@
         <h1>skill</h1>
         <h2>intro</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-          suscipit repellat odit. Illum officia, voluptas ad necessitatibus
-          ipsa, id delectus, similique incidunt atque facilis rerum laboriosam.
-          Cum accusamus eveniet suscipit.
+          학교에서 주로 배우고 다룬 언어는 파이썬이며 분석에 대한 기초지식과
+          실습경험이 있습니다.<br />
+          그 외에는 korea itacademy에서 프론트엔드 주말반(html css js등등)을
+          수강하였고<br />
+          추가로 파이썬 ai평일반 수강 및 수료 그리고 국비지원 웹개발및 ai개발반
+          수료하여<br />
+          자바 및 SQL 스프링 등등 또한 다룰수 있습니다.
         </p>
         <div class="skillset">
           <div class="skillset__left">
@@ -165,7 +168,6 @@
               </div>
             </div>
           </div>
-
           <div class="skillset__right">
             <div class="tools">
               <h3 class="skillset__title">Tools</h3>
@@ -179,12 +181,13 @@
                 <li><span>R-studio</span></li>
               </ul>
             </div>
-          <div class="etc">
-            <h3 class="skillset__title">Etc</h3>
-            <ul class="etc_list">
-              <li><span>badminton</span></li>
-              <li>analytic</li>
-            </ul>
+            <div class="etc">
+              <h3 class="skillset__title">Etc</h3>
+              <ul class="etc_list">
+                <li><span>badminton</span></li>
+                <li>analytic</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -196,9 +199,15 @@
         <h1>my lab</h1>
         <h3>Project</h3>
         <div class="project_category">
-          <button class="category__btn">total <span class="category__count">3</span></button>
-          <button class="category__btn">FrontEnd <span class="category__count">1</span></button>
-          <button class="category__btn">BackEnd <span class="category__count">2</span></button>
+          <button class="category__btn">
+            total <span class="category__count">4</span>
+          </button>
+          <button class="category__btn">
+            FrontEnd <span class="category__count">1</span>
+          </button>
+          <button class="category__btn">
+            BackEnd <span class="category__count">3</span>
+          </button>
         </div>
         <div class="project__work">
           <a href="#" class="project" target="_blank">
@@ -210,6 +219,17 @@
             <div class="project__description">
               <h3>주가분석</h3>
               <span>잘됌</span>
+            </div>
+          </a>
+          <a href="#" class="project" target="_blank">
+            <img
+              src="./image/최근청원제목 워드크라우드.png"
+              alt="project image"
+              class="project__image"
+            />
+            <div class="project__description">
+              <h3>국민청원 워드클라우드 분석</h3>
+              <span>사회이슈 반영</span>
             </div>
           </a>
           <a href="#" class="project" target="_blank">
@@ -288,8 +308,10 @@
       </div>
       <p class="contact__rights">2022 zeto - ALL rights reserved</p>
     </section>
-    <button class="arrow-up">
-      <i class="fa-solid fa-arrow-up"></i>
-    </button>
+    <div class="contact__arrow">
+      <button class="arrow-up">
+        <i class="fa-solid fa-arrow-up"></i>
+      </button>
+    </div>
   </body>
 </html>
