--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./style.css" />
+    <script defer src="./script.js"></script>
   </head>
   <body>
     <!-- nav bar 시작 -->
@@ -25,12 +26,12 @@
         <a href="#">zeto</a>
       </div>
       <ul class="navbar__menu">
-        <li class="navbar__menu__item active">Home</li>
-        <li class="navbar__menu__item">Intro</li>
-        <li class="navbar__menu__item">Skill</li>
-        <li class="navbar__menu__item">Project</li>
-        <li class="navbar__menu__item">Ex</li>
-        <li class="navbar__menu__item">Contact</li>
+        <li class="navbar__menu__item active" data-link="#home">Home</li>
+        <li class="navbar__menu__item" data-link="#intro">Intro</li>
+        <li class="navbar__menu__item" data-link="#Skill">Skill</li>
+        <li class="navbar__menu__item" data-link="#project">Project</li>
+        <li class="navbar__menu__item" data-link="#testimonials">Ex</li>
+        <li class="navbar__menu__item" data-link="#contact">Contact</li>
       </ul>
       <!-- button start -->
       <button class="navbar__toggle-btn">
@@ -52,7 +53,7 @@
         <h2 class="home__description">
           서울 은평구에 거주중이고 현재는 개발자 지망생입니다.
         </h2>
-        <button class="home__contact">연락주세오..</button>
+        <button class="home__contact" data-link="#contact">연락주세오..</button>
       </div>
     </section>
     <!-- Home end -->
@@ -199,18 +200,18 @@
         <h1>my lab</h1>
         <h3>Project</h3>
         <div class="project_category">
-          <button class="category__btn">
+          <button class="category__btn selected" data-filter="*">
             total <span class="category__count">4</span>
           </button>
-          <button class="category__btn">
+          <button class="category__btn" data-filter="FrontEnd">
             FrontEnd <span class="category__count">1</span>
           </button>
-          <button class="category__btn">
+          <button class="category__btn" data-filter="BackEnd">
             BackEnd <span class="category__count">3</span>
           </button>
         </div>
         <div class="project__work">
-          <a href="#" class="project" target="_blank">
+          <a href="#" class="project" target="_blank" data-type="BackEnd">
             <img
               src="./image/KakaoTalk_20221102_150513985.jpg"
               alt="project image"
@@ -221,7 +222,7 @@
               <span>잘됌</span>
             </div>
           </a>
-          <a href="#" class="project" target="_blank">
+          <a href="#" class="project" target="_blank" data-type="BackEnd">
             <img
               src="./image/최근청원제목 워드크라우드.png"
               alt="project image"
@@ -232,7 +233,7 @@
               <span>사회이슈 반영</span>
             </div>
           </a>
-          <a href="#" class="project" target="_blank">
+          <a href="#" class="project" target="_blank" data-type="FrontEnd">
             <img
               src="./image/KakaoTalk_20221102_150513985_01.jpg"
               alt="project image"
@@ -243,7 +244,7 @@
               <span>이쁘게나옴</span>
             </div>
           </a>
-          <a href="#" class="project" target="_blank">
+          <a href="#" class="project" target="_blank" data-type="BackEnd">
             <img
               src="./image/KakaoTalk_20221102_150513985_02.jpg"
               alt="project image"
@@ -308,10 +309,6 @@
       </div>
       <p class="contact__rights">2022 zeto - ALL rights reserved</p>
     </section>
-    <div class="contact__arrow">
-      <button class="arrow-up">
-        <i class="fa-solid fa-arrow-up"></i>
-      </button>
-    </div>
+    <i class="fa-solid fa-arrow-up arrow" id="arrow" data-link="#home"></i>
   </body>
 </html>
