--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="#">zeto</a>
       </div>
       <ul class="navbar__menu">
-        <li class="navbar__menu__item active" data-link="#home">Home</li>
+        <li class="navbar__menu__item" data-link="#home">Home</li>
         <li class="navbar__menu__item" data-link="#intro">Intro</li>
         <li class="navbar__menu__item" data-link="#Skill">Skill</li>
         <li class="navbar__menu__item" data-link="#project">Project</li>
