클론코딩 수정
클론코딩 포트폴리오 부분 수정

--- a/index.html
+++ b/index.html
@@ -531,10 +531,76 @@
                 <p>발표</p>
               </div>
             </div>
-            <div class="slide_item3">2</div>
-            <div class="slide_item3">3</div>
-            <div class="slide_item3">4</div>
-            <div class="slide_item3">5</div>
+            <div class="slide_item3">
+              <div>
+                <img src="./image/클론코딩/사용자_메인 페이지_1.png" alt="" width="700px" height="500px">
+              </div>
+              <div class="project_text">
+                <h2 class="project_title">클론코딩 메인화면</h2>
+                <p>이전에는 앱화면만 존재</p>
+                <p>클론코딩진행하면서 새로이 웹화면 구상 및 구현</p>
+              </div>
+            </div>
+            <div class="slide_item3">
+              <div>
+                <img src="./image/클론코딩/사용자_메인 페이지_4.png" alt="" width="700px" height="500px">
+              </div>
+              <div class="project_text">
+                <h2 class="project_title">메인화면 js</h2>
+                <p>드래그 슬라이드 구현</p>
+              </div>
+            </div>
+            <div class="slide_item3">
+              <div>
+                <img src="./image/클론코딩/사용자_메인 페이지_7.png" alt="" width="700px" height="500px">
+              </div>
+              <div class="project_text">
+                <h2 class="project_title">메인화면 js</h2>
+                <p>드래그 슬라이드 구현</p>
+              </div>
+            </div>
+            <div class="slide_item3">
+              <div>
+                <img src="./image/클론코딩/관리자_메인 페이지_1.png" alt="" width="700px" height="500px">
+              </div>
+              <div class="project_text">
+                <h2 class="project_title">메인관리자 페이지 보수</h2>
+                <p>메인 페이지의 리뷰숫자 순서대로 랭킹출력</p>
+                <p>최근 리뷰 출력</p>
+                <p>회원수 및 회원 일부 등 그외의 항목들 출력</p>
+                <p>DB와 통신하여 예약건수를 계산하여 월별 예약금액 그래프 산출</p>
+              </div>
+            </div>
+            <div class="slide_item3">
+              <div>
+                <img src="./image/클론코딩/식당관리자_예약상태변경 페이지.png" alt="" width="700px" height="500px">
+              </div>
+              <div class="project_text">
+                <h2 class="project_title">식당관리자 비동기 통신이용</h2>
+                <p>'<'이나'>' 클릭시 날짜가 바뀌며 이를 이용해 바뀐날짜대로 데이터를 얻어옴</p>
+                <p>얻어온 데이터를 이용해 예약가능이나 불가능출력</p>
+                <p>해당 날짜의 시간별 예약 현황을 시간별 탭메뉴를 이용해 출력</p>
+              </div>
+            </div>
+            <div class="slide_item3">
+              <div>
+                <img src="./image/클론코딩/식당관리자_매출관리 페이지.png" alt="" width="700px" height="500px">
+              </div>
+              <div class="project_text">
+                <h2 class="project_title">식당관리자 비동기 통신이용</h2>
+                <p>'<'이나'>' 클릭시 날짜가 바뀌며 이를 이용해 바뀐날짜대로 데이터를 얻어옴</p>
+                <p>아래 표를 이용해 날별 월별 예약 건수 및 취소 건수 예약금액을 계산하여 출력</p>
+              </div>
+            </div>
+            <div class="slide_item3">
+                <a href="https://github.com/hj2222222/catchTable" class="last_link">사용자 깃허브 링크</a>
+                <h1>/</h1>
+                <a href="https://github.com/hj2222222/Admin" class="last_link">전체관리자 깃허브 링크</a>
+                <h1>/</h1>
+                <a href="https://github.com/hj2222222/ResAdmin" class="last_link">식당관리 깃허브 링크</a>
+                <h1>/</h1>
+                <a href="https://youtu.be/jwWkmn8TFlU" class="last_link">발표영상 링크</a>
+              </div>
             <div class="slide_prev_button slide_button3" style="display: none">◀</div>
             <div class="slide_next_button slide_button3" style="display: none">▶</div>
             <ul class="slide_pagination3"></ul>
