아이콘 부드럽게 처리

--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@
         <div class="intro__majors">
           <div class="major">
             <div class="major_icon">
-              <img src="./image/html.png" alt="" width="110px" height="70px">
-              <img src="./image/css.png" alt="" width="110px" height="70px">
-              <img src="./image/js.png" alt="" width="110px" height="70px">
-              <img src="./image/vue.png" alt="" width="110px" height="70px">
-              <img src="./image/ajax.png" alt="" width="110px" height="70px">
-              <img src="./image/jquery.png" alt="" width="110px" height="70px">
+              <img src="./image/html.png" alt="" width="110px" height="70px" class="icon_img">
+              <img src="./image/css.png" alt="" width="110px" height="70px" class="icon_img">
+              <img src="./image/js.png" alt="" width="110px" height="70px" class="icon_img">
+              <img src="./image/vue.png" alt="" width="110px" height="70px" class="icon_img">
+              <img src="./image/ajax.png" alt="" width="110px" height="70px" class="icon_img">
+              <img src="./image/jquery.png" alt="" width="110px" height="70px" class="icon_img">
             </div>
             <h2 class="major_title">FrontEnd</h2>
             <div class="major_description mb_5">
@@ -197,7 +197,7 @@
               Ajax,J-query
             </div>
             <div class="major_icon">
-              <img src="./image/git.png" alt="" width="110px" height="110px">
+              <img src="./image/git.png" alt="" width="110px" height="110px" class="icon_img">
             </div>
             <h2 class="major_title">Version controll</h2>
             <div class="major_description">
@@ -206,15 +206,15 @@
           </div>
           <div class="major">
             <div class="major_icon">
-              <img src="./image/python.png" alt="" width="110px" height="70px">
-              <img src="./image/java.png" alt="" width="110px" height="70px">
-              <img src="./image/pandas.png" alt="" width="110px" height="70px">
-              <img src="./image/sklearn.png" alt="" width="110px" height="70px">
-              <img src="./image/selenium.png" alt="" width="110px" height="70px">
-              <img src="./image/mysql.png" alt="" width="110px" height="70px">
-              <img src="./image/konlpy.png" alt="" width="110px" height="70px">
-              <img src="./image/spring.png" alt="" width="110px" height="70px">
-              <img src="./image/thymeleaf.png" alt="" width="110px" height="70px">
+              <img src="./image/python.png" alt="" width="110px" height="70px" class="icon_img">
+              <img src="./image/java.png" alt="" width="110px" height="70px" class="icon_img">
+              <img src="./image/pandas.png" alt="" width="110px" height="70px" class="icon_img">
+              <img src="./image/sklearn.png" alt="" width="110px" height="70px" class="icon_img">
+              <img src="./image/selenium.png" alt="" width="110px" height="70px" class="icon_img">
+              <img src="./image/mysql.png" alt="" width="110px" height="70px" class="icon_img">
+              <img src="./image/konlpy.png" alt="" width="110px" height="70px" class="icon_img">
+              <img src="./image/spring.png" alt="" width="110px" height="70px" class="icon_img">
+              <img src="./image/thymeleaf.png" alt="" width="110px" height="70px" class="icon_img">
             </div>
             <h2 class="major_title">BackEnd</h2>
             <div class="major_description mb_5">
@@ -223,7 +223,7 @@
               konlpy,Thymeleaf
             </div>
             <div class="major_icon">
-              <img src="./image/adsp.jfif" alt="" width="110px" height="110px">
+              <img src="./image/adsp.jfif" alt="" width="110px" height="110px" class="icon_img">
             </div>
             <h2 class="major_title">Certificate</h2>
             <div class="major_description">
